--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node node_modules/nodemon/bin/nodemon.js src/app.js --exec",
-    "lint": "node node_modules/.bin/eslint **.*.js"
+    "lint": "node node_modules/.bin/eslint **.*.js",
+    "test": "mocha src/tests/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -14,15 +15,19 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.15.5",
-    "morgan": "^1.9.0"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "eslint": "^4.7.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint": "^4.7.2",
+    "expect": "^21.2.1",
+    "mocha": "^3.5.3",
     "nodemon": "^1.12.1"
   }
 }
